# cliqs

./: LICENSE  MANIFEST.in  README.md  example.csv  main.py  pyproject.toml  requirements.txt  utils.py
src/: __init__.py  __main__.py  cliqs.py  features_extraction.py
src/cliqs/: __init__.py  __main__.py  cliqs.py  features_extraction.py
src/resources/: queries.json
